// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header.vue Logout user on logout button onlick  1`] = `
<div>
  <header
    class="header v-sheet v-sheet--tile theme--light v-toolbar v-app-bar v-app-bar--clipped v-app-bar--fixed"
    style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
  >
    <div
      class="v-toolbar__content"
      style="height: 64px;"
    >
      <img
        alt="Go to the Government of British Columbia website"
        class="img side-left-margin"
        src="@/assets/images/bc-logo-horizontal.svg"
      />
       
      <div
        class="v-toolbar__title"
      >
        
      </div>
       
      <sup
        aria-label="This application is currently in Beta phase"
        class="beta-phase-banner"
      >
        Beta
      </sup>
       
      <div
        class="spacer"
      />
       
      <div
        class="spacer"
      />
       
      <!---->
       
      <div
        class="v-toolbar__title d-flex"
      >
        <button
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--large"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-edit theme--dark"
            />
          </span>
        </button>
         
        <div
          class="profile-title"
        >
          
        Welcome user lastName
      
        </div>
         
        <button
          class="v-btn v-btn--flat v-btn--text theme--light v-size--default white--text"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <span
              class="mr-2 logout"
              color="white"
            >
              Logout
            </span>
          </span>
        </button>
      </div>
       
      <a
        class="mr-2 d-sm-none toggleMenu v-btn--active v-btn v-btn--flat v-btn--router v-btn--text theme--dark v-size--default"
        href="#/"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate mdi mdi-menu theme--dark"
          />
        </span>
      </a>
    </div>
  </header>
   
  <nav
    class="navigation-main"
    id="navbar"
  >
    <ul>
      <li
        class="d-sm-none"
      >
        <a
          class="mr-2 login-btn v-btn--active v-btn v-btn--flat v-btn--router v-btn--text theme--dark v-size--default"
          href="#/"
        >
          <span
            class="v-btn__content"
          >
            Login
          </span>
        </a>
      </li>
       
      <li>
        <a
          class="router-link-exact-active router-link-active"
          href="#/"
        >
          Home
        </a>
      </li>
      <li>
        <a
          class=""
          href="#/dashboard"
        >
          Projects
        </a>
      </li>
      <li>
        <a
          class=""
          href="#/help"
        >
          Help
        </a>
      </li>
      <li>
        <a
          class=""
          href="#/add-test-account"
        >
          Load test accounts
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Header.vue Toggle menu onlick  1`] = `
<div>
  <header
    class="header v-sheet v-sheet--tile theme--light v-toolbar v-app-bar v-app-bar--clipped v-app-bar--fixed"
    style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
  >
    <div
      class="v-toolbar__content"
      style="height: 64px;"
    >
      <img
        alt="Go to the Government of British Columbia website"
        class="img side-left-margin"
        src="@/assets/images/bc-logo-horizontal.svg"
      />
       
      <div
        class="v-toolbar__title"
      >
        
      </div>
       
      <sup
        aria-label="This application is currently in Beta phase"
        class="beta-phase-banner"
      >
        Beta
      </sup>
       
      <div
        class="spacer"
      />
       
      <div
        class="spacer"
      />
       
      <!---->
       
      <div
        class="v-toolbar__title d-flex"
      >
        <button
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--large"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-edit theme--dark"
            />
          </span>
        </button>
         
        <div
          class="profile-title"
        >
          
        Welcome user lastName
      
        </div>
         
        <button
          class="v-btn v-btn--flat v-btn--text theme--light v-size--default white--text"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <span
              class="mr-2 logout"
              color="white"
            >
              Logout
            </span>
          </span>
        </button>
      </div>
       
      <a
        class="mr-2 d-sm-none toggleMenu v-btn--active v-btn v-btn--flat v-btn--router v-btn--text theme--dark v-size--default"
        href="#/"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate mdi mdi-menu theme--dark"
          />
        </span>
      </a>
    </div>
  </header>
   
  <nav
    class="navigation-main active-menu"
    id="navbar"
  >
    <ul>
      <li
        class="d-sm-none"
      >
        <a
          class="mr-2 login-btn v-btn--active v-btn v-btn--flat v-btn--router v-btn--text theme--dark v-size--default"
          href="#/"
        >
          <span
            class="v-btn__content"
          >
            Login
          </span>
        </a>
      </li>
       
      <li>
        <a
          class="router-link-exact-active router-link-active"
          href="#/"
        >
          Home
        </a>
      </li>
      <li>
        <a
          class=""
          href="#/dashboard"
        >
          Projects
        </a>
      </li>
      <li>
        <a
          class=""
          href="#/help"
        >
          Help
        </a>
      </li>
      <li>
        <a
          class=""
          href="#/add-test-account"
        >
          Load test accounts
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Header.vue renders props when passed 1`] = `
<div>
  <header
    class="header v-sheet v-sheet--tile theme--light v-toolbar v-app-bar v-app-bar--clipped v-app-bar--fixed"
    style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
  >
    <div
      class="v-toolbar__content"
      style="height: 64px;"
    >
      <img
        alt="Go to the Government of British Columbia website"
        class="img side-left-margin"
        src="@/assets/images/bc-logo-horizontal.svg"
      />
       
      <div
        class="v-toolbar__title"
      >
        
      </div>
       
      <sup
        aria-label="This application is currently in Beta phase"
        class="beta-phase-banner"
      >
        Beta
      </sup>
       
      <div
        class="spacer"
      />
       
      <div
        class="spacer"
      />
       
      <!---->
       
      <div
        class="v-toolbar__title d-flex"
      >
        <button
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--large"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-account-edit theme--dark"
            />
          </span>
        </button>
         
        <div
          class="profile-title"
        >
          
        Welcome user lastName
      
        </div>
         
        <button
          class="v-btn v-btn--flat v-btn--text theme--light v-size--default white--text"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <span
              class="mr-2 logout"
              color="white"
            >
              Logout
            </span>
          </span>
        </button>
      </div>
       
      <a
        class="mr-2 d-sm-none toggleMenu v-btn--active v-btn v-btn--flat v-btn--router v-btn--text theme--dark v-size--default"
        href="#/"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate mdi mdi-menu theme--dark"
          />
        </span>
      </a>
    </div>
  </header>
   
  <nav
    class="navigation-main"
    id="navbar"
  >
    <ul>
      <li
        class="d-sm-none"
      >
        <a
          class="mr-2 login-btn v-btn--active v-btn v-btn--flat v-btn--router v-btn--text theme--dark v-size--default"
          href="#/"
        >
          <span
            class="v-btn__content"
          >
            Login
          </span>
        </a>
      </li>
       
      <li>
        <a
          class="router-link-exact-active router-link-active"
          href="#/"
        >
          Home
        </a>
      </li>
      <li>
        <a
          class=""
          href="#/dashboard"
        >
          Projects
        </a>
      </li>
      <li>
        <a
          class=""
          href="#/help"
        >
          Help
        </a>
      </li>
      <li>
        <a
          class=""
          href="#/add-test-account"
        >
          Load test accounts
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
